# stock-predictor

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.fly  README.md  docker-compose.yml  fly.toml  pyproject.toml  railway.toml
docs/: CONCEPTS.md  DEPLOYMENT.md  FUTURE_PLAN.md  HANDOFF.md  NEWS.md  OPTIMAL.md  PROJECT_LOG.md  USAGE.md  continue.md
reports/: hypersearch_20260604T214210_n25_2015.md  hypersearch_20260605T164202_n25_2015.md  hypersearch_20260605T165843_n10_2022.md  hypersearch_20260605T165929_n10_2022.md  hypersearch_20260605T171126_n25_2015.md  hypersearch_20260605T171247_n10_2022.md
scripts/: leakage_audit.py  per_feature_audit.py  phase10_conf_floor_sweep.py  phase11_feature_pruning.py  phase14_gdelt_bulk_fetch.py  phase16_chain_sweep.py  phase18_hp_sweep.py  phase19_shrinkage_sweep.py  run_hypersearch.py  run_phase1.py  run_phase5.py  seed_synthetic.py  sensitivity.py  serve.py
src/stockpred/: __init__.py  config.py  hypersearch.py  labels.py  labels_triple_barrier.py  pipeline.py  pipeline_v5.py
src/stockpred/backend/: __init__.py  api.py  db.py  jobs.py  models.py  schemas.py  snapshot.py  store.py
src/stockpred/backtest/: engine.py  hrp.py  portfolio.py
src/stockpred/data/: edgar.py  fundamentals.py  (+6 more)
tests/: test_backend_api.py  test_backtest_engine.py  test_baseline_nan.py  test_bayesian_shrinkage.py  test_edgar.py  test_fama_macbeth.py  test_features.py  test_gdelt.py  test_jobs_queue.py  test_labels_no_leakage.py  test_phase11.py  test_phase6.py  test_phase7.py  test_phase8.py  test_phase9.py  test_pipeline_integration.py  test_pipeline_v5.py  test_portfolio_construction.py  test_quote_endpoint.py  test_sentiment.py  test_stress.py  test_universe_html_parse.py  test_walk_forward.py  test_watchlist_and_news.py
web/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.node.json  vite.config.js  vite.config.ts
web/src/: index.css  main.tsx
(+37 files in other folders)
